k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-api
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-api
  template:
    metadata:
      labels:
        app: orders-api
    spec:
      containers:
        - name: orders-api
          image: ecommerce-orders-api:aks-v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: orders-api
  namespace: ecommerce
spec:
  selector:
    app: orders-api
  ports:
    - port: 80
      targetPort: 8080
